Fix Mutable Data Structure in SnapshotsInProgress
The feature info instances shouldn't be mutable to prevent accidental bugs down the line.